@@ -13,13 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: autogen
-      run: ./autogen.sh
-    - name: configure
-      run: ./configure
+    - name: cmake
+      run: cmake -S . -B build/
     - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+      run: make -C build
