@@ -33,7 +33,6 @@
 #ifndef SOCKET_H
 #define SOCKET_H
 
-#include "config.h"
 
 #include <string>
 #include <vector>
