@@ -1,3 +1,0 @@
-#undef HAVE_LUA
-#undef HAVE_ZLIB
-#undef HAVE_SSL
