@@ -1,7 +1,0 @@
-#!/bin/sh
-#dnl echo "no" | gettextize -c -f
-aclocal
-autoheader
-automake -a
-autoconf
-./configure
